finished pig profile and user acct template

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 body {
     background-color: white;
     padding: 25px;
@@ -14,9 +13,17 @@ p {
     line-height: 30px;
 }
 
+.card {
+    width: 350px;
+}
+
+.float-right {
+    float: left;
+}
+
 .infographic {
-  text-align: center;
-  margin-top: 60px;
+    text-align: center;
+    margin-top: 60px;
 }
 
 .center {
@@ -42,42 +49,41 @@ p {
     right: 15px;
     color: rgb(252, 245, 237);
     font-size: 40px;
-
 }
 
 
-
 /* FROM Foundation FOR Signup Form */
+
 .translucent-form-overlay {
     max-width: 500px;
     width: 100%;
     background-color: rgba(54, 54, 54, 0.8);
     padding: 20px;
     color: #fefefe;
-  }
-  
-  .translucent-form-overlay .columns.row {
+}
+
+.translucent-form-overlay .columns.row {
     display: block;
-  }
-  
-  .translucent-form-overlay h3, .translucent-form-overlay label {
+}
+
+.translucent-form-overlay h3,
+.translucent-form-overlay label {
     color: #fefefe;
-  }
-  
-  .translucent-form-overlay input, .translucent-form-overlay select {
-    color: #8a8a8a;
-  }
-  
-  .translucent-form-overlay input::-webkit-input-placeholder {
-    color: #8a8a8a;
-  }
-  
-  .translucent-form-overlay input:-ms-input-placeholder {
-    color: #8a8a8a;
-  }
-  
-  .translucent-form-overlay input::placeholder {
-    color: #8a8a8a;
-  }
+}
 
+.translucent-form-overlay input,
+.translucent-form-overlay select {
+    color: #8a8a8a;
+}
 
+.translucent-form-overlay input::-webkit-input-placeholder {
+    color: #8a8a8a;
+}
+
+.translucent-form-overlay input:-ms-input-placeholder {
+    color: #8a8a8a;
+}
+
+.translucent-form-overlay input::placeholder {
+    color: #8a8a8a;
+}
