--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,7 @@
           {{else}}
           <a href="/login">Login</a>
           {{/if}}
+          | <a href="/newpiggy">List a Piglet</a>
         </nav>
       </header>
     </div>
