--- a/views/new-piggy.handlebars
+++ b/views/new-piggy.handlebars
@@ -24,9 +24,32 @@
             <p>Farm Name</p>
             <input type="text" id="pigFarm">
             
+            <button id="upload_widget" class="cloudinary-button">Upload Pig-ture</button>
+
+
             <button type="submit" class="primary button expanded search-button" id="submit">List Pig</button>
         </form>
+
+        
     </div>
 </div>
+
+
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+
+<script type="text/javascript">  
+var myWidget = cloudinary.createUploadWidget({
+  cloudName: 'my_cloud_name', 
+  uploadPreset: 'my_preset'}, (error, result) => { 
+    if (!error && result && result.event === "success") { 
+      console.log('Done! Here is the image info: ', result.info); 
+    }
+  }
+)
+
+document.getElementById("upload_widget").addEventListener("click", function(){
+    myWidget.open();
+  }, false);
+</script>
+
 <script src="./assets/js/newPig.js"></script>
-<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
