Lots of changes

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -21,7 +21,7 @@
     <!-- Signup Form -->
     <div class="medium-6 large-4 cell">
       <div class="translucent-form-overlay">
-        <form class="registration-form">
+        <form class="registration-form" id = "signupForm">
           <h3>Join ForeverPig</h3>
           <div class="row columns">
             <label>First Name
