--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,15 @@
+    <div class="cell" style="text-align:center">
+        <header class="center">
+            <h1><img src="../assets/images/forever-pig-logo.png" alt="Forever Pig" width="200px"></h1>
+            <nav>
+                <a href="/">Home</a> |
+                <a href="/directory">Directory</a> |
+                <a href="/newpiggy">List a Piglet</a> |
+                {{> login}}
+            </nav>
+        </header>
+        <hr>
+    </div>
 <div class="cell">
   <div class="hero-custom">
     <div class="hero-text">Today's Buddy.<br>Tomorrow's Bacon.</div>
