--- a/views/new-piggy.handlebars
+++ b/views/new-piggy.handlebars
@@ -1,4 +1,18 @@
-{{!-- This renders the new piglet form that merges into the "body" of main.handlebars  --}}
+{{!-- Header --}}
+<div class="cell" style="text-align:center">
+    <header class="center">
+        <h1><img src="../assets/images/forever-pig-logo.png" alt="Forever Pig" width="200px"></h1>
+        <nav>
+            <a href="/">Home</a> |
+            <a href="/directory">Directory</a> |
+            <a href="/newpiggy">List a Piglet</a> |
+            {{> login}}
+        </nav>
+    </header>
+    <hr>
+</div>
+{{!-- END Header --}}
+
 <div style="display:flex; flex-direction:column; align-items:center">
 
     <div style="width:300px;text-align: center; ">
