--- a/views/user-account.handlebars
+++ b/views/user-account.handlebars
@@ -1,2 +1,10 @@
 
-<h1>{{first_name}}'s Page!</h1>
+<h1>Welcome {{user.first_name}}</h1>
+
+
+{{#each requestedPig as |piggy|}}
+
+{{name}}
+{{breed}}
+
+{{/each}}
