--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -1,6 +1,6 @@
-          {{#if logged_in}}
-          <a href="/profile">profile</a> |
-          <button class="no-button" id="logout">Logout</button>
-          {{else}}
-          <a href="/login">Login</a>
-          {{/if}}
+{{#if logged_in}}
+<a href="/account/:id">My Account</a> |
+<a href="/logout">Logout</a>
+{{else}}
+<a href="/login">Login</a>
+{{/if}}
