Updated login partial

--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -1,5 +1,5 @@
 {{#if logged_in}}
-<a href="/account/:id">My Account</a> |
+<a href="/account/">My Account</a> |
 <a href="/logout">Logout</a>
 {{else}}
 <a href="/login">Login</a>
