--- a/views/directory.handlebars
+++ b/views/directory.handlebars
@@ -30,9 +30,11 @@
         <p><span style="font-size: 27px;">📍 </span>{{location}}</p>
       </div>
       <div class="card-user-profile-actions">
-        <a href="/pig-profile/{{id}}" class="card-user-profile-button button solid custom-button">
+        <a id = "requestBtn" href="/pig-profile/{{id}}" class="card-user-profile-button button solid custom-button">
           <span style="font-size: 18px;">More about {{name}}</span></a>
       </div>
     </div>
     {{/each}}
   </div>
+
+  <script src="/js/request.js"></script>
