--- a/views/new-piggy.handlebars
+++ b/views/new-piggy.handlebars
@@ -6,7 +6,8 @@
             <a href="/">Home</a> |
             <a href="/directory">Directory</a> |
             <a href="/newpiggy">List a Piglet</a> |
-            {{> login}}
+            <a href="/account">My Account</a> |
+            <a href="/logout">Logout</a>
         </nav>
     </header>
     <hr>
