--- a/views/user-account.handlebars
+++ b/views/user-account.handlebars
@@ -1,19 +1,34 @@
+{{!-- Header --}}
+<div class="cell" style="text-align:center">
+    <header class="center">
+        <h1><img src="../assets/images/forever-pig-logo.png" alt="Forever Pig" width="200px"></h1>
+        <nav>
+            <a href="/">Home</a> |
+            <a href="/directory">Directory</a> |
+            <a href="/newpiggy">List a Piglet</a> |
+            <a href="/account">My Account</a> |
+            <a href="/logout">Logout</a>
+        </nav>
+    </header>
+    <hr>
+</div>
+{{!-- END Header --}}
+
 <div class="center">
 
-<button type="button" class="alert button" href="/logout">Logout</button>
 
     <h3 style="margin-top: 30px;"><em>Welcome</em><br>{{user.first_name}}</h3>
 
     <div style="margin-top: 30px;" class="center">
         {{!-- If the user has pig(s) requested, display them --}}
-        {{#if user.piggyId}}
-            {{#each user.piggyId as |piggy|}}
-            {{name}}
-            {{breed}}
-            {{/each}}
-        {{!-- If there are no pigs requested, then link to directory --}}
-        {{else}}
-        <a href="/directory">Browse available piglets</a>
-        {{/if}}
+
+        {{#each user.Piggies as |piggy|}}
+        {{name}}
+        {{breed}}
+        {{/each}}
+
     </div>
+    <p style="margin-top: 50px;">
+        <button type="button" class="alert button" href="/logout">Logout</button>
+    </p>
 </div>
