--- a/views/new-piggy.handlebars
+++ b/views/new-piggy.handlebars
@@ -17,7 +17,7 @@
 <div style="display:flex; flex-direction:column; align-items:center">
 
     <div style="width:300px;text-align: center; ">
-            <button id="upload_widget" class="cloudinary-button">Upload Pig-ture</button>
+            {{!-- <button id="upload_widget" class="cloudinary-button">Upload Pig-ture</button> --}}
         <form id="newPiggy">
             <p>Name of Piglet</p>
             <input type="text" id="pigName">
@@ -39,8 +39,12 @@
             
             <p>Farm Name</p>
             <input type="text" id="pigFarm">
-            
 
+            <p>Short Description</p>
+            <input type="text" id="pigSD">
+
+             <p>Detailed Description</p>
+            <textarea id="pigLD"></textarea>
 
             <button type="submit" class="primary button expanded search-button" id="submit">List Pig</button>
         </form>
@@ -50,7 +54,7 @@
 </div>
 
 
-<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+{{!-- <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
 
 <script type="text/javascript">  
 var myWidget = cloudinary.createUploadWidget({
@@ -65,6 +69,6 @@ var myWidget = cloudinary.createUploadWidget({
 document.getElementById("upload_widget").addEventListener("click", function(){
     myWidget.open();
   }, false);
-</script>
+</script> --}}
 
 <script src="./assets/js/newPig.js"></script>
