--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
                 <a href="/">Home</a> |
                 <a href="/directory">Directory</a> |
                 <a href="/newpiggy">List a Piglet</a> |
-                <a href="/account">Account</a> |
+                <a href="/account">My Account</a> |
                 {{> login}}
                 
             </nav>
