README and Github links in footer

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,11 @@
   <!-- Footer -->
   <footer class="cell center">
     <hr>
-    🐽<br>Created by Zach, Jared, Leone, and Dru
+    🐽<br>Created by 
+    <a href="https://github.com/lsoth">Leone</a>,&nbsp;
+    <a href="https://github.com/zmaurer1">Zach</a>,&nbsp;
+    <a href="https://github.com/druludwig">Dru</a>,&nbsp;and
+    <a href="https://github.com/MagnetMoss">Jared</a>
   </footer>
 
   </div>
